--- a/reframework/data/Health Bars/languages/zh-cn.json
+++ b/reframework/data/Health Bars/languages/zh-cn.json
@@ -12,8 +12,11 @@
         "center": "中心",
         "color": "颜色",
         "colors": "颜色",
+        "current_time": "Current Time",
         "current_value": "当前值",
+        "debug": "Debug",
         "enabled": "开启",
+        "everything_seems_to_be_ok": "Everything seems to be OK!",
         "family": "字体系列",
         "fill_type": "填充类型",
         "font_notice": "对字体的任何更改都需要重新加载脚本!",
@@ -22,22 +25,21 @@
         "health_value_label": "生命值标签",
         "height": "高",
         "hide_if_dead": "生物死亡时隐藏生命值显示",
-        "hide_if_enemy_is_behind_obstacles": "Hide if Enemy is behind Obstacles",
+        "hide_if_enemy_is_not_in_sight": "Hide if Enemy Is Not in Sight",
         "hide_if_full_health": "生物满血时隐藏生命值显示",
-        "hide_if_no_update_function_is_being_called": "如果没有调用更新函数，则隐藏",
+        "history": "History",
+        "history_size": "History Size",
         "include": "包括",
         "inside": "内部",
         "italic": "斜体",
         "language": "语言",
         "left_to_right": "从左到右",
         "max_distance": "最大距离",
-        "max_distance_scope": "最大距离(瞄准镜)",
         "max_value": "最大值",
         "menu_font": "菜单字体(建议设置大小为20)",
         "menu_font_change_disclaimer": "警告：多次更改语言和菜单字体大小将导致崩溃！",
         "mod_name": "Health Bars (简体翻译 By Coconutat)",
         "offset": "补偿量",
-        "opacity_Falloff_scope": "透明度渐变(瞄准镜)",
         "opacity_falloff": "透明度渐变",
         "outline": "轮廓",
         "outside": "外缘",
@@ -46,9 +48,8 @@
         "render_during_cutscenes": "在剧情过场期间渲染",
         "render_everyone_else": "渲染其他所有人",
         "render_when_aiming": "瞄准时渲染",
-        "render_when_hud_is_disabled_by_game": "在游戏禁用HUD时进行渲染",
+        "render_when_game_is_paused": "Render when Game is Paused",
         "render_when_normal": "正常的时候渲染(大概就是人物站在原地或者的移动时候)",
-        "render_when_using_scope": "使用瞄准镜的时候渲染",
         "reset_config": "重置配置",
         "reset_time_duration_on_aim_target_for_everyone": "重新设置瞄准目标的时间持续效果",
         "reset_time_duration_on_damage_dealt_for_everyone": "重新设置造成伤害的时间持续效果",
@@ -57,12 +58,17 @@
         "settings": "设置",
         "shadow": "阴影",
         "size": "大小",
-        "status": "状态",
         "style": "样式",
         "thickness": "厚度",
         "time_duration": "持续的时间(每秒为单位)",
+        "timer_delays": "Timer Delays",
         "top_to_bottom": "从上到下",
         "ui_font": "UI字体(用户界面字体)",
+        "update_enemy_data_delay": "Update Enemy Data (sec)",
+        "update_game_data_delay": "Update Game Data (sec)",
+        "update_player_data_delay": "Update Player Data (sec)",
+        "update_singletons_delay": "Update Singletons (sec)",
+        "update_window_size_delay": "Update Window Size (sec)",
         "use_d2d_renderer_if_available": "使用Direct2D渲染器(如果可用)",
         "visible": "是否可见",
         "width": "宽",
